Fixed social login buttons alignments

--- a/src/app/components/default/login/login.component.css
+++ b/src/app/components/default/login/login.component.css
@@ -186,7 +186,7 @@ body {
 }
 
 .form-box .input-box {
-  width: 340px;
+  width: 400px;
   height: 50px;
   border-bottom: 2px solid black;
   margin: 30px 0;
